--- a/cu_kg/app/templates/control_board/cb_base.html
+++ b/cu_kg/app/templates/control_board/cb_base.html
@@ -4,6 +4,7 @@
 
 {% block styles %}
     {{ super() }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('control_board.static', filename='css/control_board/cb_base.css') }}">
 {% endblock %}
 
 {% block home_active %}
@@ -12,4 +13,29 @@
 
 {% block control_board_active %}
     <li class="active">
+{% endblock %}
+
+{% block page_content %}
+    <div class="container marketing">
+        <div class="row">
+            <div class="col-lg-4">
+                <img class="img-circle" src="{{ url_for('control_board.static', filename='images/control_board/classify_relation.png') }}" alt="{{ classify_name }} Image" width="140" height="140">
+                <h2>{{ classify_name }}</h2>
+                <p>{{ classify_description }}</p>
+                <p><a class="btn btn-default" href="#" role="button">View Details &raquo;</a></p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-circle" src="{{ url_for('control_board.static', filename='images/control_board/attribute_relation.png') }}" alt="{{ attribute_name }} Image" width="140" height="140">
+                <h2>{{ attribute_name }}</h2>
+                <p>{{ attribute_description }}</p>
+                <p><a class="btn btn-default" href="#" role="button">View Details &raquo;</a></p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-circle" src="{{ url_for('control_board.static', filename='images/control_board/common_relation.png') }}" alt="{{ common_name }} Image" width="140" height="140">
+                <h2>{{ common_name }}</h2>
+                <p>{{ common_description }}</p>
+                <p><a class="btn btn-default" href="#" role="button">View Details &raquo;</a></p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
