--- a/cu_kg/app/static/css/base.css
+++ b/cu_kg/app/static/css/base.css
@@ -8,6 +8,7 @@ body {
   background-color: #eee;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-bottom: 60px;
 }
 
 .nav-justified > li > a {
