--- a/cu_kg/app/templates/base.html
+++ b/cu_kg/app/templates/base.html
@@ -43,7 +43,7 @@
                     {% block relation_search_active %}
                     <li>
                     {% endblock %}
-                        <a href="#">
+                        <a href="{{ url_for('relation_search.rs_base') }}">
                             <span class="glyphicon glyphicon-search"></span>&nbsp;
                             关系搜索
                         </a>
