--- a/cu_kg/app/templates/base.html
+++ b/cu_kg/app/templates/base.html
@@ -11,7 +11,8 @@
     <div class="container">
         <div class="masthead">
             <div class="headers">
-                <h3 class="text-muted">CU-KG</h3>
+                <img src="{{ url_for('home.static', filename='images/head.png') }}">
+                <h2 class="text-muted"><sup>V0.2</sup></h2>
                 <div class="btn-group actions" role="group">
                     {% if current_user.is_authenticated() %}
                     <a class="btn btn-success" href="#">{{ current_user.username }} 的用户空间</a>
@@ -80,4 +81,11 @@
 
 {% block content %}
     {% block page_content %}{% endblock %}
+    {% block footer %}
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">&copy;&nbsp;同济大学电子与信息工程学院大数据智能分析与处理实验室&nbsp;&nbsp;2015</p>
+            </div>
+        </footer>
+    {% endblock %}
 {% endblock %}
