--- a/cu_kg/app/templates/relation_model/rm_base.html
+++ b/cu_kg/app/templates/relation_model/rm_base.html
@@ -31,7 +31,7 @@
                 &nbsp;&nbsp;&nbsp;
                 <label><hr class="hint" id="ying_hint"><span>隐式关系</span></label>
             </div>
-            <div class="graph-container"></div>
+            <div id="graph-container" class="graph-container"></div>
         </div>
     </div>
 {% endblock %}
@@ -41,10 +41,73 @@
     <script src="{{ url_for('relation_model.static', filename='bootstrap-fileinput/js/fileinput.min.js') }}"></script>
     <script src="{{ url_for('relation_model.static', filename='bootstrap-fileinput/js/fileinput_locale_zh.js') }}"></script>
 
+    <!-- sigmajs -->
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/sigma.core.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/conrad.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/utils/sigma.utils.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/utils/sigma.polyfills.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/sigma.settings.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.dispatcher.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.configurable.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.graph.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.camera.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.quad.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/classes/sigma.classes.edgequad.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/captors/sigma.captors.mouse.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/captors/sigma.captors.touch.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/sigma.renderers.canvas.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/sigma.renderers.webgl.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/sigma.renderers.svg.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/sigma.renderers.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/webgl/sigma.webgl.nodes.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/webgl/sigma.webgl.nodes.fast.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/webgl/sigma.webgl.edges.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/webgl/sigma.webgl.edges.fast.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/webgl/sigma.webgl.edges.arrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.labels.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.hovers.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.nodes.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edges.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edges.curve.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edges.arrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edges.curvedArrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edgehovers.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edgehovers.curve.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edgehovers.arrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.edgehovers.curvedArrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/canvas/sigma.canvas.extremities.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.utils.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.nodes.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.edges.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.edges.curve.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.labels.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/renderers/svg/sigma.svg.hovers.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/middlewares/sigma.middlewares.rescale.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/middlewares/sigma.middlewares.copy.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/misc/sigma.misc.animation.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/misc/sigma.misc.bindEvents.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/misc/sigma.misc.bindDOMEvents.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/src/misc/sigma.misc.drawHovers.js') }}"></script>
+
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.plugins.dragNodes/sigma.plugins.dragNodes.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.parsers.json/sigma.parsers.json.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.renderers.edgeLabels/settings.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.def.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.curve.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.curvedArrow.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.plugins.animate/sigma.plugins.animate.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.layout.forceAtlas2/worker.js') }}"></script>
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/plugins/sigma.layout.forceAtlas2/supervisor.js') }}"></script>
+
+    <!-- self-utils for sigmajs -->
+    <script src="{{ url_for('entity_base.static', filename='sigmajs/graph_util.js') }}"></script>
+
     <script>
         $("#relation_file").fileinput({
 	        allowedFileExtensions : ['txt'],
             maxFileCount: 1
 		});
+
+        createGraphVisualizationWithFlag({{ data | tojson | safe }}, 'graph-container');
     </script>
 {% endblock %}
