--- a/cu_kg/app/templates/auth/login.html
+++ b/cu_kg/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}登陆CU-KG{% endblock %}
 
 {% block styles %}
     {{ super() }}
@@ -13,7 +13,7 @@
 {% block page_content %}
     <div class="container login">
         <form class="form-signin" method="POST" action="{{ url_for('auth.login') }}">
-            <h3>CU-KG 用户</h3>
+            <h3>CU-KG 用户登陆</h3>
             {{ login_form.hidden_tag() }}
             {{ login_form.username(id="inputUsername", class="form-control", placeholder="用户名", required=True, autofocus=True) }}
             {{ login_form.password(id="inputPassword", class="form-control", placeholder="密码", required=True) }}
